force-app/main/default/objects/SchedulerSettings__c/SchedulerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Scheduler Settings</label>
</CustomObject>