force-app/main/default/objects/SchedulerSettings__c/fields/InternalResourceAccountId__c.field-meta.xml
<CustomField>
    <fullName>InternalResourceAccountId__c</fullName>
    <description>The ID for the account that will contain all of the Contacts that are deemed as &quot;resources&quot;</description>
    <inlineHelpText>The ID for the account that will contain all of the Contacts that are deemed as &quot;resources&quot;</inlineHelpText>
    <label>Internal Resource Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>