force-app/main/default/objects/SchedulerSettings__c/fields/IsAbleToModifyBookings__c.field-meta.xml
<CustomField>
    <fullName>IsAbleToModifyBookings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this group/individual has the ability to edit bookings via the Resource Scheduler interface</description>
    <inlineHelpText>If checked, this group/individual has the ability to edit bookings via the Resource Scheduler interface</inlineHelpText>
    <label>Is Able To Modify Bookings</label>
    <type>Checkbox</type>
</CustomField>