force-app/main/default/objects/SchedulerSettings__c/fields/MinimumDays__c.field-meta.xml
<CustomField>
    <fullName>MinimumDays__c</fullName>
    <defaultValue>45</defaultValue>
    <description>The minimum number of days to display on the scheduler</description>
    <label>MinimumDays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>