force-app/main/default/objects/SchedulerSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SETUP_TYPE</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>InternalResourceAccountId__c</columns>
    <columns>MinimumDays__c</columns>
    <columns>IsAbleToModifyBookings__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>